 - Produce conformant triangulations for merged facets using option 'Qt' 
 - Verify -fno-strict-aliasing needed for gcc 4.1, 4.2, 4.3 (qset segfault)
 - Set up debian build [Pkg-octave-devel]
   Please keep debian files in config/ and project/debian/
   Branch 'debian' is from http://savannah.nongnu.org/cvs/?group=qhull
   project/debian needs updating for its new location.
 - Qhull-go.bat: How to add $PWD/bin to PATH from QHULL-GO

To do
 - Review email for doc changes
 - Git: Create signed tags for Qhull versions
 - Wiki: Add FIXUP to QH11026 for known problems
 - Notes to compgeom on conformant triangulation and Voronoi volume
 - Add an Autotools build for everything
 - Update debian build
 - RMP build of Qhull
 - Fix up cpp_command
 - Set File Ver and Product Ver in dll
 - Fix MBorland

-----------------
Gitorious 2010/04/16
 Rewrote README.txt
 Redid vcproj for DevStudio builds
 - Updated files for 2011.1
 - Rename libqhull to libqhull6 in accord with qhull6.dll
 - Added qh_QHpointer_dllimport to work around MSVC problem
 - user_eg.c: Added test of qh_qh for qh_QHpointer_dllimport
 - qhull-exports.def: Identify data items
 - qhull-exports.def: Add VERSION
 - Add test for executables to q_eg, etc.
 - Add explanation of user_eg* to user_eg prompts
 - index.htm: Fix MATLAB links
 - QhullFacet: Added isSimplicial, isTopOrient, isTriCoplanar, isUpperDelaunay
 
------------
Qhull 2011.0  2010/04/08 6.2.0 

Changes to deliverables
 - qvoronoi: Deprecated 'Qt' and 'QJn'. Removed from documentation and prompts.
   These options produced duplicate Voronoi vertices for cospherical data.
 - Removed doskey from Qhull-go.bat.  It is incompatible with Windows 7
 - Added 'facets' argument to user_eg3.cpp
 - user_eg links with shared library
 - qhulltest.cpp: Add closing prompt.

Changes to documentation
 - qvoronoi.htm: Remove quotes from qvoronoi example
 - qhull-cpp.xml: Add naming conventions
 - index.htm: Add Google Scholar references