@@ -12,7 +12,6 @@ Need help
    Please keep debian files in config/ and project/debian/
    Branch 'debian' is from http://savannah.nongnu.org/cvs/?group=qhull
    project/debian needs updating for its new location.
- - Qhull-go.bat: How to add $PWD/bin to PATH from QHULL-GO
 
 To do
  - Review email for doc changes
@@ -30,6 +29,8 @@ To do
 Gitorious 2010/04/16
  Rewrote README.txt
  Redid vcproj for DevStudio builds
+ - Fixed Qhull-go.bat.  QHULL-GO invokes it with command.com,
+ - Fixed CMakeLists for user_eg2 build
  - Updated files for 2011.1
  - Rename libqhull to libqhull6 in accord with qhull6.dll
  - Added qh_QHpointer_dllimport to work around MSVC problem
